# blurple-parrot

./: LICENSE  README.md  pyproject.toml  test.py
bparrot/: __init__.py  application_commands.py  auth.py  client.py  components.py  core.py  http.py  interaction.py  models.py  verify.py
bparrot/models/: __init__.py  interaction_message.py
