[tool.poetry]
name = "blurple-parrot"
version = "0.1.0"
description = "A Discord HTTP Interactions library"
authors = ["Patrick Brennan (AM2i9)"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
PyNaCl = "^1.4.0"
aiohttp = "^3.7.4"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
